--- a/integ-ecms/pom.xml
+++ b/integ-ecms/pom.xml
@@ -10,6 +10,6 @@
   <packaging>pom</packaging>
   <name>eXo Integration - Content</name>
   <modules>
-    <!-- MODULES -->
+    <module>integ-ecms-social</module>
   </modules>
 </project>
