--- a/pom.xml
+++ b/pom.xml
@@ -21,10 +21,12 @@
     <!-- Dependencies versions -->
     <!-- ********************* -->
     <org.exoplatform.portal.version>3.2.0-PLF-SNAPSHOT</org.exoplatform.portal.version>
-    <org.exoplatform.cs.version>2.2.1-SNAPSHOT</org.exoplatform.cs.version>
-    <org.exoplatform.ks.version>2.2.1-SNAPSHOT</org.exoplatform.ks.version>
-    <org.exoplatform.ecms.version>2.2.0-GA-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>1.2.1-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.cs.version>2.2.2-SNAPSHOT</org.exoplatform.cs.version>
+    <org.exoplatform.ks.version>2.2.2-SNAPSHOT</org.exoplatform.ks.version>
+    <org.exoplatform.ecms.version>2.3.0-GA-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>1.2.2-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.commons.version>1.1.1-GA-SNAPSHOT</org.exoplatform.commons.version>
+    <org.gatein.shindig.version>1.0-r790473-Patch05</org.gatein.shindig.version>
     <!-- ***************************************************** -->
     <!-- Plugin versions (waiting for an upgrade in exo parent -->
     <!-- ***************************************************** -->
