--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
     <!-- ********************* -->
     <!-- Dependencies versions -->
     <!-- ********************* -->
-    <org.exoplatform.portal.version>3.2.0-PLF-Beta6</org.exoplatform.portal.version>
-    <org.exoplatform.cs.version>2.2.3</org.exoplatform.cs.version>
-    <org.exoplatform.ks.version>2.2.3</org.exoplatform.ks.version>
-    <org.exoplatform.ecms.version>2.3.1</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>1.2.3</org.exoplatform.social.version>
-    <org.exoplatform.commons.version>1.1.2</org.exoplatform.commons.version>
+    <org.exoplatform.portal.version>3.2.0-PLF-SNAPSHOT</org.exoplatform.portal.version>
+    <org.exoplatform.cs.version>2.2.4-SNAPSHOT</org.exoplatform.cs.version>
+    <org.exoplatform.ks.version>2.2.4-SNAPSHOT</org.exoplatform.ks.version>
+    <org.exoplatform.ecms.version>2.3.2-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>1.2.4-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.commons.version>1.1.3-SNAPSHOT</org.exoplatform.commons.version>
     <org.gatein.shindig.version>2.0.2-Beta03</org.gatein.shindig.version>
     <!-- ***************************************************** -->
     <!-- Plugin versions (waiting for an upgrade in exo parent -->
