--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,12 @@
     <org.exoplatform.ecms.version>2.3.2-SNAPSHOT</org.exoplatform.ecms.version>
     <org.exoplatform.social.version>1.2.4-SNAPSHOT</org.exoplatform.social.version>
     <org.exoplatform.commons.version>1.1.3-SNAPSHOT</org.exoplatform.commons.version>
-    <org.gatein.shindig.version>2.0.2-Beta03</org.gatein.shindig.version>
+    <org.gatein.shindig.version>2.0.2-Beta03</org.gatein.shindig.version>    
+    <org.exoplatform.kernel.version>2.3.1-GA</org.exoplatform.kernel.version>
+    <org.exoplatform.jcr.version>1.14.1-GA</org.exoplatform.jcr.version>
+    <org.slf4j.version>1.5.8</org.slf4j.version>
+    <org.exoplatform.core.version>2.4.1-GA</org.exoplatform.core.version>
+    
     <!-- ***************************************************** -->
     <!-- Plugin versions (waiting for an upgrade in exo parent -->
     <!-- ***************************************************** -->
