--- a/integ-ks/pom.xml
+++ b/integ-ks/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.exoplatform.integration</groupId>
     <artifactId>integ</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
   </parent>
   <artifactId>integ-ks</artifactId>
   <packaging>pom</packaging>
