--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
     <!-- ********************* -->
     <!-- Dependencies versions -->
     <!-- ********************* -->
-    <org.exoplatform.portal.version>3.2.0-PLF</org.exoplatform.portal.version>
-    <org.exoplatform.cs.version>2.2.5</org.exoplatform.cs.version>
-    <org.exoplatform.ks.version>2.2.5</org.exoplatform.ks.version>
-    <org.exoplatform.ecms.version>2.3.3</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>1.2.5</org.exoplatform.social.version>
-    <org.exoplatform.commons.version>1.1.4</org.exoplatform.commons.version>
+    <org.exoplatform.portal.version>3.2.1-PLF-SNAPSHOT</org.exoplatform.portal.version>
+    <org.exoplatform.cs.version>2.2.6-SNAPSHOT</org.exoplatform.cs.version>
+    <org.exoplatform.ks.version>2.2.6-SNAPSHOT</org.exoplatform.ks.version>
+    <org.exoplatform.ecms.version>2.3.4-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>1.2.6-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.commons.version>1.1.5-SNAPSHOT</org.exoplatform.commons.version>
     <org.gatein.shindig.version>2.0.2</org.gatein.shindig.version>    
     <org.exoplatform.kernel.version>2.3.3-GA</org.exoplatform.kernel.version>
     <org.exoplatform.jcr.version>1.14.3-GA</org.exoplatform.jcr.version>
