[maven-release-plugin] prepare for next development iteration

--- a/integ-ks/integ-ks-social/pom.xml
+++ b/integ-ks/integ-ks-social/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.exoplatform.integration</groupId>
     <artifactId>integ-ks</artifactId>
-    <version>1.0.5</version>
+    <version>1.0.6-SNAPSHOT</version>
   </parent>
   <artifactId>integ-ks-social</artifactId>
   <packaging>jar</packaging>
