INTEG-64 - GIT migration: add version.buildnumber.plugin + version.release.plugin

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,8 @@
     <version.versions.plugin>1.2</version.versions.plugin>
     <version.war.plugin>2.1</version.war.plugin>
     <version.assembly.plugin>2.2.1</version.assembly.plugin>
+    <version.release.plugin>2.2.1</version.release.plugin>
+	<version.buildnumber.plugin>1.0</version.buildnumber.plugin>
   </properties>
   <dependencyManagement>
     <dependencies>
