--- a/integ-cs/integ-cs-social/pom.xml
+++ b/integ-cs/integ-cs-social/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.exoplatform.integration</groupId>
     <artifactId>integ-cs</artifactId>
-    <version>1.0.7-SNAPSHOT</version>
+    <version>1.0.7</version>
   </parent>
   <artifactId>integ-cs-social</artifactId>
   <packaging>jar</packaging>
