--- a/pom.xml
+++ b/pom.xml
@@ -8,29 +8,29 @@
   </parent>
   <groupId>org.exoplatform.integration</groupId>
   <artifactId>integ</artifactId>
-  <version>4.0.0-SNAPSHOT</version>
+  <version>4.0.0.Alpha1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>eXo Integration</name>
   <scm>
    <connection>scm:git:git://github.com/exoplatform/integration.git</connection>
    <developerConnection>scm:git:git@github.com:exoplatform/integration.git</developerConnection>
-   <url>http://fisheye.exoplatform.org/browse/integration/trunk</url>
+   <url>http://fisheye.exoplatform.org/browse/integration</url>
   </scm>
   <properties>
     <!-- ********************* -->
     <!-- Dependencies versions -->
     <!-- ********************* -->
-    <org.exoplatform.portal.version>3.2.4-PLF-SNAPSHOT</org.exoplatform.portal.version>
-    <org.exoplatform.cs.version>2.2.9-SNAPSHOT</org.exoplatform.cs.version>
-    <org.exoplatform.ks.version>2.2.9-SNAPSHOT</org.exoplatform.ks.version>
-    <org.exoplatform.ecms.version>2.3.7-SNAPSHOT</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>1.2.9-SNAPSHOT</org.exoplatform.social.version>
-    <org.exoplatform.commons.version>1.1.8-SNAPSHOT</org.exoplatform.commons.version>
-    <org.gatein.shindig.version>2.0.2</org.gatein.shindig.version>    
-    <org.exoplatform.kernel.version>2.3.7-GA</org.exoplatform.kernel.version>
-    <org.exoplatform.jcr.version>1.14.7-GA</org.exoplatform.jcr.version>
+    <org.exoplatform.portal.version>3.2.5-PLF-SNAPSHOT</org.exoplatform.portal.version>
+    <org.exoplatform.cs.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.cs.version>
+    <org.exoplatform.ks.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.ks.version>
+    <org.exoplatform.ecms.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.commons.version>4.0.0.Alpha1-SNAPSHOT</org.exoplatform.commons.version>
+    <org.exoplatform.kernel.version>2.3.8-GA-SNAPSHOT</org.exoplatform.kernel.version>
+    <org.exoplatform.jcr.version>1.14.8-GA-SNAPSHOT</org.exoplatform.jcr.version>
+    <org.exoplatform.core.version>2.4.8-GA-SNAPSHOT</org.exoplatform.core.version>
+    <org.gatein.shindig.version>2.0.2</org.gatein.shindig.version>
     <org.slf4j.version>1.5.8</org.slf4j.version>
-    <org.exoplatform.core.version>2.4.7-GA</org.exoplatform.core.version>
     <org.shindig.version>2.0.2</org.shindig.version>
     <org.json.version>20070829</org.json.version>
     <javax.jcr.version>1.0</javax.jcr.version>
