--- a/integ-cs/integ-cs-social/pom.xml
+++ b/integ-cs/integ-cs-social/pom.xml
@@ -83,12 +83,12 @@
       <scope>provided</scope>
     </dependency>
     
-    <dependency>
+    <!-- <dependency>
       <groupId>org.exoplatform.cs</groupId>
       <artifactId>exo.cs.eXoApplication.contact.service</artifactId>
       <version>${org.exoplatform.cs.version}</version>
       <scope>provided</scope>
-    </dependency>
+    </dependency> -->
     
     <dependency>
       <groupId>org.exoplatform.cs</groupId>
