--- a/integ-social/pom.xml
+++ b/integ-social/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.exoplatform.integration</groupId>
     <artifactId>integ</artifactId>
-    <version>1.0.8</version>
+    <version>1.0.9-SNAPSHOT</version>
   </parent>
   <artifactId>integ-social</artifactId>
   <packaging>pom</packaging>
