--- a/pom.xml
+++ b/pom.xml
@@ -20,17 +20,17 @@
     <!-- ********************* -->
     <!-- Dependencies versions -->
     <!-- ********************* -->
-    <org.exoplatform.portal.version>3.2.5-PLF</org.exoplatform.portal.version>
-    <org.exoplatform.cs.version>2.2.10</org.exoplatform.cs.version>
-    <org.exoplatform.ks.version>2.2.10</org.exoplatform.ks.version>
-    <org.exoplatform.ecms.version>2.3.8</org.exoplatform.ecms.version>
-    <org.exoplatform.social.version>1.2.10</org.exoplatform.social.version>
-    <org.exoplatform.commons.version>1.1.9</org.exoplatform.commons.version>
+    <org.exoplatform.portal.version>3.2.6-PLF-SNAPSHOT</org.exoplatform.portal.version>
+    <org.exoplatform.cs.version>2.2.11-SNAPSHOT</org.exoplatform.cs.version>
+    <org.exoplatform.ks.version>2.2.11-SNAPSHOT</org.exoplatform.ks.version>
+    <org.exoplatform.ecms.version>2.3.9-SNAPSHOT</org.exoplatform.ecms.version>
+    <org.exoplatform.social.version>1.2.11-SNAPSHOT</org.exoplatform.social.version>
+    <org.exoplatform.commons.version>1.1.10-SNAPSHOT</org.exoplatform.commons.version>
     <org.gatein.shindig.version>2.0.2</org.gatein.shindig.version>    
-    <org.exoplatform.kernel.version>2.3.8-GA</org.exoplatform.kernel.version>
-    <org.exoplatform.jcr.version>1.14.8-GA</org.exoplatform.jcr.version>
+    <org.exoplatform.kernel.version>2.3.9-GA-SNAPSHOT</org.exoplatform.kernel.version>
+    <org.exoplatform.jcr.version>1.14.9-GA-SNAPSHOT</org.exoplatform.jcr.version>
     <org.slf4j.version>1.5.8</org.slf4j.version>
-    <org.exoplatform.core.version>2.4.8-GA</org.exoplatform.core.version>
+    <org.exoplatform.core.version>2.4.9-GA-SNAPSHOT</org.exoplatform.core.version>
     <org.shindig.version>2.0.2</org.shindig.version>
     <org.json.version>20070829</org.json.version>
     <javax.jcr.version>1.0</javax.jcr.version>
