--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
     <!-- **************************************** -->
     <!-- Project Dependencies                     -->
     <!-- **************************************** -->
+    <!-- eXo deps -->    
     <org.exoplatform.portal.version>3.4.0.Final</org.exoplatform.portal.version>
     <org.exoplatform.calendar.version>4.0.0.Alpha1-kill-exobuild-SNAPSHOT</org.exoplatform.calendar.version>
     <org.exoplatform.wiki.version>4.0.0.Alpha1-kill-exobuild-SNAPSHOT</org.exoplatform.wiki.version>
@@ -48,6 +49,7 @@
     <org.exoplatform.jcr.version>1.14.9-GA-SNAPSHOT</org.exoplatform.jcr.version>
     <org.exoplatform.core.version>2.4.9-GA-SNAPSHOT</org.exoplatform.core.version>
     <org.gatein.shindig.version>2.0.2-CP01</org.gatein.shindig.version>
+    <!-- 3rd parties deps -->
     <org.slf4j.version>1.5.8</org.slf4j.version>
     <org.shindig.version>2.0.2-CP01</org.shindig.version>
     <org.json.version>20070829</org.json.version>
@@ -57,6 +59,7 @@
     <javax.portlet.version>2.0</javax.portlet.version>
     <org.xwiki.rendering.version>4.1.3</org.xwiki.rendering.version>
   </properties>
+      <!-- ALL VERSIONS OF DEPENDENCIES HAVE TO BE DEFINED HERE -->
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -94,7 +97,6 @@
         <artifactId>commons-webui-ext</artifactId>
         <version>${org.exoplatform.commons.version}</version>
       </dependency>
-      <!-- ALL VERSIONS OF DEPENDENCIES HAVE TO BE DEFINED HERE -->
       <dependency>
         <groupId>org.exoplatform.core</groupId>
         <artifactId>exo.core.component.organization.api</artifactId>
