--- a/integ-social/integ-social-ecms/pom.xml
+++ b/integ-social/integ-social-ecms/pom.xml
@@ -72,6 +72,11 @@
       <artifactId>exo.portal.webui.portlet</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.exoplatform.portal</groupId>
+      <artifactId>exo.portal.component.resources</artifactId>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
       <groupId>org.exoplatform.social</groupId>
       <artifactId>social-component-core</artifactId>
     </dependency>
